--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "Parcel":"^2.12.0",
+    "parcel": "^2.12.0",
     "cssnano": "^4.1.11",
     "gsap": "^3.12.2",
     "images": "^3.2.4",
