--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   ],
   "devDependencies": {
     "sass": "^1.66.1",
-    "parcel": "^1.12.5"
+    "parcel": "1.12.5"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "parcel": "^1.12.5",
+    "parcel": "1.12.5",
     "cssnano": "^4.1.11",
     "gsap": "^3.12.2",
     "images": "^3.2.4",
