--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "portfolio",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html --open",
     "build": "parcel build src/index.html",
@@ -15,18 +14,17 @@
     "defaults"
   ],
   "devDependencies": {
-    "sass": "^1.66.1",
-    "parcel": "1.12.5"
+    "sass": "^1.66.1"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "parcel": "1.12.5",
     "cssnano": "^4.1.11",
     "gsap": "^3.12.2",
     "images": "^3.2.4",
     "imagesloaded": "^5.0.0",
     "m": "^1.8.5",
     "mixitup": "^3.3.1",
+    "parcel": "^2.12.0",
     "smooth-scrollbar": "^8.8.4",
     "so": "^1.0.1",
     "swiper": "^5.4.5",
