--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "defaults"
   ],
   "devDependencies": {
-    "sass": "^1.66.1"
+    "parcel": "^2.12.0",
+    "sass": "^1.66.1",
+    "@parcel/transformer-sass": "^2.12.0"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
